--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ '/static/bootstrap.css'|asseturl }}">
 <link rel="stylesheet" href="{{ '/static/fonts/open-iconic/font/css/open-iconic-bootstrap.css'|asseturl }}">
 
-<title>{% block title %}{{ this.title }}{% endblock %} | {{ _("Tor Project | Tor Broser Manual") }}</title>
+<title>{% block title %}{{ this.title }}{% endblock %} | {{ _("Tor Project | Tor Browser Manual") }}</title>
 <body class="no-gutters" data-spy="scroll" data-target="#sidenav-topics" id="topics" data-children=".item">
   <header>
     {% include 'navbar.html' %}
