--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -1,7 +1,7 @@
 <div class="container-fluid sidebar col-xs-12 col-sm-12 col-md-3 col-lg-3">
   <nav class="smalltopics no-background navbar navbar-expand-lg navbar-light bg-white p-0 fixed">
     <a class="text-primary bg-white font-weight-bold navbar-brand" href="#collapseTopicsNav">
-      Topics
+	{{ _('Topics') }}
     </a>
     <label class="side-toggler" for="menu-toggle">
       <a class="btn btn-lg outline-primary text-primary navbar-toggler chevron" data-toggle="collapse" data-target="#navbarSupportedTopicsContent" aria-controls="navbarSupportedTopicsContent" aria-expanded="false" aria-label="Toggle navigation">
