Make CSS and image links relative (#28488)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ '/static/bootstrap.css'|asseturl }}">
-<link rel="stylesheet" href="{{ '/static/fonts/open-iconic/font/css/open-iconic-bootstrap.css'|asseturl }}">
+<link rel="stylesheet" href="{{ 'static/bootstrap.css'|asseturl }}">
+<link rel="stylesheet" href="{{ 'static/fonts/open-iconic/font/css/open-iconic-bootstrap.css'|asseturl }}">
 
 <title>{% block title %}{{ this.title }}{% endblock %} | {{ _("Tor Project | Tor Browser Manual") }}</title>
 <body class="no-gutters" data-spy="scroll" data-target="#sidenav-topics" id="topics" data-children=".item">
