--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar no-background navbar-expand-lg navbar-dark fixed-top bg-primary">
   <a class="navbar-brand" href="/">
-    <img src="{{ '/static/images/tor-logo.svg' }}" >
+    <img src="{{ 'static/images/tor-logo.svg' }}" >
     <span class="sr-only">{{ _("Tor Logo") }}</span>
   </a>
   <label for="nav-toggle">
