--- a/templates/footer.html
+++ b/templates/footer.html
@@ -39,7 +39,7 @@
       	  <div class="dropdown-menu">
             {% for id, item in bag('alternatives').items() %}
               {% if this.alt != id %}
-    	          <a class="dropdown-item" href="{{ item.url|url }}">{{ item.language }}</a>
+    	          <a class="dropdown-item" href="{{ this.path|url(alt=id) }}">{{ item.language }}</a>
               {% endif %}
             {% endfor %}
       	</div>
