--- a/templates/topics.html
+++ b/templates/topics.html
@@ -1,10 +1,10 @@
 {% from "macros/topic.html" import render_topic %}
 <div id="#topics">
   {% for item in this.children %}
-  <h5 class="text-muted text-uppercase mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">
+  <h5 class="text-muted text-uppercase mb-3 p-0 {{ bag('alternatives', this.alt, 'direction') }}">
     <a href="{{ item|url }}">{{ item.title }}</a>
   </h5>
-  <p class="text-muted mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">
+  <p class="text-muted mb-3 p-0 {{ bag('alternatives', this.alt, 'direction') }}">
     {{ item.description }}
   </p>
 
