Update download Tor Browser link in navbar.html

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,7 +36,7 @@
         {% endfor %}
       </div>
     </div>
-    <a class="btn text-primary bg-white btn-light pull-right mt-2" href="https://www.torproject.org/download/download-easy.html.en">
+    <a class="btn text-primary bg-white btn-light pull-right mt-2" href="https://www.torproject.org/download/">
       <i class="glyphicon-glyphicon-arrow-down"></i>{{ _("Download Tor Browser") }}
     </a>
   </div>
