Add donate button to navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,6 +3,7 @@
     <img src="{{ '/static/images/tor-logo.svg'|asseturl }}" >
     <span class="sr-only">{{ _("Tor Logo") }}</span>
   </a>
+  <a href="https://donate.torproject.org" title="{{ _("Donate") }}"><h5><span class="badge badge-warning p-2">{{ _("Donate Now") }}</span></h5></a>
   <label for="nav-toggle">
     <a class="btn btn-lg btn-primary navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
