no hardcoded caps, for l10n

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -21,9 +21,9 @@
     </div>
     <div class="col-12 d-flex justify-content-center">
       <div class="col-md-8 mt-5 pb-5 border">
-        <p class="text-primary-light text-uppercase">{{ _('Subscribe to our Newsletter') }}</p>
+        <p class="text-primary-light">{{ _('SUBSCRIBE TO OUR NEWSLETTER') }}</p>
         <p class="text-light">{{ _('Get monthly updates and opportunities from the Tor Project:') }}</p>
-        <p class="w"><a class="btn btn-small btn-dark mt-2 text-white text-uppercase font-weight-bold active" role="button" aria-pressed="true" href="https://newsletter.torproject.org/">{{ _('Sign up') }}</a></p>
+        <p class="w"><a class="btn btn-small btn-dark mt-2 text-white font-weight-bold active" role="button" aria-pressed="true" href="https://newsletter.torproject.org/">{{ _('SIGN UP') }}</a></p>
       </div>
     </div>
 
