--- a/assets/scss/_tor.scss
+++ b/assets/scss/_tor.scss
@@ -68,13 +68,13 @@
 .font-weight-bold   { font-family: Source Sans Pro Bold  }
 
 h5 {
-  text-transform: none !important;
+  text-transform: uppercase;
   font-weight: bold;
   color: $purple;
 }
 
 h6 {
-  text-transform: none !important;
+  text-transform: uppercase;
   font-weight: bold;
   color: $purple;
 }
