--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -7,7 +7,7 @@
   </h3>
   <div class="anchor-spacer">
     <div>
-      <h5 class="text-muted mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">
+      <h5 class="text-muted text-uppercase mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">
 	<a href="{{ item|url }}">{{ item.title }}</a>
       </h5>
 
