better to forward pull requests to github for now

--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -18,7 +18,7 @@
             <ul class="list-group list-group-flush">
                 <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
                 <li class="list-group-item">
-                        <a href="https://dip.torproject.org/web/manual/edit/master/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
+                        <a href="https://github.com/torproject/manual/edit/master/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
                         <a href="https://dip.torproject.org/web/manual/issues/new?issue[assignee_id]=&issue[milestone_id]=&issue[title]=User feedback about {{ item.path }}">{{ _("Suggest Feedback") }}</a> -
                         <a href="{{ item|url }}">{{ _("Permalink") }}</a>
                 </li>
