Copy Support portal header for style points
will-fix: https://dip.torproject.org/web/manual/issues/9

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,12 @@
     {% include 'navbar.html' %}
   </header>
   <div class="page">
+    <div class="jumbotron jumbotron-fluid bg-primary text-white mb-md-5">
+      <div class="container-fluid text-center">
+        <h1 class="display-4 no-border font-weight-light pt-5 pb-4">{{ this.title }}</h1>
+        <!-- {% include 'search.html' %} -->
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="row flex-xl-nowrap">
 	{% include 'sidenav.html' %}
