--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -14,6 +14,9 @@
     </div>
      <div id="{{ item._id }}" class="anchor-spacer {{ bag('alternatives', alternative, 'direction') }}" role="tabpanel" data-parent="#{{ t_id }}">
       {{ item.body|safe }}
+      {% if item._id == "secure-connections" %}
+        {% include 'secure-connections.html' %}
+      {% endif %}
          <div class="card mt-5">
             <ul class="list-group list-group-flush">
                 <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
@@ -24,7 +27,7 @@
                 </li>
             </ul>
         </div>
-  </div>
+      </div>
   </div>
 </div>
 {% endmacro %}
