Add images for animation

--- a/templates/secure-connections.html
+++ b/templates/secure-connections.html
@@ -15,16 +15,16 @@
 <input class="toggle" type="checkbox" id="tor-switch"/>
 
 <div id="http" class="switch-off">
-  <p>HTTP ONLY!</p>
+  <img src="{{ '/static/images/tor-https-0.png'|asseturl }}" />
 </div>
 <div id="https" class="switch-off">
-  <p>HTTPS ONLY!</p>
+  <img src="{{ '/static/images/tor-https-1.png'|asseturl }}" />
 </div>
 <div id="tor" class="switch-off">
-  <p>TOR ONLY!</p>
+  <img src="{{ '/static/images/tor-https-2.png'|asseturl }}" />
 </div>
 <div id="https-tor" class="switch-on">
-  <p>TOR + HTTPS!!!</p>
+  <img src="{{ '/static/images/tor-https-3.png'|asseturl }}" />
 </div>
 
 <h5>POTENTIALLY VISIBLE DATA</h5>
