Fix favicon path

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,9 @@
 
 <link rel="stylesheet" href="{{ '/static/fonts/fontawesome/css/all.min.css'|asseturl }}" rel="stylesheet">
 <!-- Standard favicon -->
-<link rel="icon" type="image/x-icon" href="{{ '/static/images/favicon/favicon.ico'|asseturl }}">
+<link rel="icon" type="image/x-icon" href="{{ '/static/images/favicon.ico'|asseturl }}">
 <!-- Recommended favicon format -->
-<link rel="icon" type="image/png" href="{{ '/static/images/favicon/favicon.png'|asseturl }}">
+<link rel="icon" type="image/png" href="{{ '/static/images/favicon.png'|asseturl }}">
 
 <title>{% block title %}{{ this.title }}{% endblock %} | {{ _("Tor Project | Tor Browser Manual") }}</title>
 <body class="no-gutters" data-spy="scroll" data-target="#sidenav-topics" id="topics" data-children=".item">
