edit this page in gitlab.tpo instead of github. part of https://gitlab.torproject.org/tpo/web/team/-/issues/20

--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -21,7 +21,7 @@
             <ul class="list-group list-group-flush">
                 <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
                 <li class="list-group-item">
-                        <a href="https://github.com/torproject/manual/edit/master/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
+                        <a href="https://gitlab.torproject.org/tpo/web/manual/-/edit/main/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
                         <a href="https://support.torproject.org/misc/bug-or-feedback/">{{ _("Give Feedback") }}</a> -
                         <a href="{{ item|url }}">{{ _("Permalink") }}</a>
                 </li>
