Open external links in new tabs in the offline manual

--- a/templates/offline.html
+++ b/templates/offline.html
@@ -72,6 +72,12 @@ function changePage() {
 }
 changePage();
 addEventListener('hashchange', changePage);
+for (const link of document.querySelectorAll('a')) {
+  const href = link.getAttribute('href');
+  if (href && (href.startsWith('https://') || href.startsWith('http://'))) {
+    link.setAttribute('target', '_blank');
+  }
+}
     </script>
   </body>
 </html>
