--- a/templates/offline.html
+++ b/templates/offline.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ _("Tor Browser Manual") }}</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src chrome: 'unsafe-inline'; object-src 'none'" />
     <link rel="stylesheet" href="{{ '/static/css/bootstrap.css'|asseturl }}">
     <link rel="stylesheet" href="{{ '/static/fonts/fontawesome/css/all.min.css'|asseturl }}" rel="stylesheet">
     <style>
